--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
 
 <br>
 <button>LOGIN</button>
-<h4>Forgot Password</h4>
+<h4><a href="resetpw.html">Forgot Password</h4><a></h4>
 
 <!-- insert reset passwork link here-->
 
